# vectordb-bench

./: .cnb.yml  .gitignore  .gitmodules  README.md
.codebuddy/agents/: CppDeveloper.md  Planner.md
.codebuddy/memory-bank/: activeContext.md  architecture.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.codebuddy/memory-bank/tasks/: _index.md  phase0-naive-baseline.md  phase1-core-framework.md  phase2-cpu-control.md  phase3-test-cases.md  phase4-database-clients.md  phase5-comparison.md  phase6-report-generation.md  phase7-extensions.md
.codebuddy/rules/: cppRules.mdc
.devcontainer/: devcontainer.json
.github/agents/: Planner.agent.md
.github/workflows/: sync-to-cnb.yml
.ide/: Dockerfile
naive/: CMakeLists.txt  README.md
naive/docs/: PROJECT_STRUCTURE.md  USAGE_GUIDE.md
naive/include/: arena_hnswlib_wrapper.h  benchmark_config.h  cli_parser.h  hnswlib_wrapper.h  index_manager.h  index_wrapper.h
naive/scripts/: convert_hdf5_to_fvecs.py  download_datasets.sh  extend_groundtruth.py  generate_dataset.py  generate_dataset.sh  generate_ip_dataset.py  generate_large_dataset.py  generate_test_dataset.py  run_search_test.sh
naive/src/: arena_hnswlib_wrapper.cpp  benchmark_concurrent.cpp  benchmark_index_build.cpp  benchmark_search.cpp  cli_parser.cpp  dataset_loader.cpp  dataset_loader.h  hnswlib_wrapper.cpp  index_manager.cpp  index_wrapper.cpp  main.cpp  search_test.cpp
naive/tests/: CMakeLists.txt  README.md  arena_hnswlib_wrapper_test.cpp  cli_parser_test.cpp  hnswlib_wrapper_test.cpp  index_manager_test.cpp  index_wrapper_test.cpp
